Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19468

Opening a QML file with warning as the first file after starting Qt Creator in design mode with warnings disabled leads to a crash

    XMLWordPrintable

Details

    Description

      To reproduce:

      • disable warning about unsupported features (uncheck: Tools->Qt Quick->Qt Quick Designer->warn about unsupported features in Qt Quick Designer)
      • restart Qt Creator
      • open attached project
      • open main.qml
      • press Design

      In debug builds it aborts with this:

      ASSERT failure in QList<T>::at: "index out of range", file /home/jopoikel/Qt/5.9.3/gcc_64/include/QtCore/qlist.h, line 541
      
      #0  0x00007ffff50c7428 in __GI_raise (sig=sig@entry=6)
          at ../sysdeps/unix/sysv/linux/raise.c:54
      #1  0x00007ffff50c902a in __GI_abort () at abort.c:89
      #2  0x00007ffff5ca480e in QMessageLogger::fatal(char const*, ...) const ()
         from /home/jopoikel/Qt/5.9.3/gcc_64/lib/libQt5Core.so.5
      #3  0x00007ffff5ca0209 in qt_assert_x(char const*, char const*, char const*, int) () from /home/jopoikel/Qt/5.9.3/gcc_64/lib/libQt5Core.so.5
      #4  0x00007fffb8ceb647 in QList<QmlDesigner::DocumentMessage>::at (
          this=0x3268a98, i=0)
          at /home/jopoikel/Qt/5.9.3/gcc_64/include/QtCore/qlist.h:541
      #5  0x00007fffb8ce9bd8 in QmlDesigner::DocumentWarningWidget::refreshContent (
          this=0x3268a40)
          at ../../../../creator/src/plugins/qmldesigner/documentwarningwidget.cpp:128
      #6  0x00007fffb8cea559 in QmlDesigner::DocumentWarningWidget::showEvent (
          this=0x3268a40, event=0x7fffffffc8e0)
          at ../../../../creator/src/plugins/qmldesigner/documentwarningwidget.cpp:184
      #7  0x00007ffff7024d98 in QWidget::event(QEvent*) ()
         from /home/jopoikel/Qt/5.9.3/gcc_64/lib/libQt5Widgets.so.5
      #8  0x00007ffff6fe85bc in QApplicationPrivate::notify_helper(QObject*, QEvent*)
          () from /home/jopoikel/Qt/5.9.3/gcc_64/lib/libQt5Widgets.so.5
      #9  0x00007ffff6fef8c1 in QApplication::notify(QObject*, QEvent*) ()
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tjenssen Tim Jenssen
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes