QmlDesigner: fix crash

Change-Id: I402a6701e8339150c908e0e3eca014f3c8ee727a
Task-number: QTCREATORBUG-19468
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>