src/plugins/qmldesigner/documentwarningwidget.cpp
@@ -125,7 +125,7 @@ void DocumentWarningWidget::refreshContent()
     }
 
     QString messageString;
-    DocumentMessage message = m_messages.at(m_currentMessage);
+    DocumentMessage message = m_messages.value(m_currentMessage);
     if (message.type() == DocumentMessage::ParseError) {
         messageString += errorToString(message);
         m_navigateLabel->setText(generateNavigateLinks());
